<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/login_upper_bg">
        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/login_to_catch_up_with_friends"
            android:layout_centerInParent="true"
            android:textSize="30sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="200dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome Back"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorBlue"
            android:textStyle="italic"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:textColorHint="@color/colorDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"
                android:textColor="@color/colorDark"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:textColorHint="@color/colorDark"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:textColor="@color/colorDark"
                android:ems="15"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:layout_gravity="end"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_bg"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/register_btn_bg"
            android:padding="15dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlue"/>


    </LinearLayout>

</RelativeLayout>